@@ -331,6 +331,9 @@ BUGFIXES:
   ZOOKEEPER-1648. Fix WatcherTest in JDK7
   (Thawan Kooburat via phunt)
 
+  ZOOKEEPER-1606. intermittent failures in ZkDatabaseCorruptionTest on
+  jenkins (lixiaofeng via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
